Added html of top__header

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Gadget Shop</title>
     <link
       rel="shortcut icon"
       href="https://placekitten.com/96/139"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="css/index.css" />
     <script
       src="https://unpkg.com/htmx.org@1.9.10"
       integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
@@ -17,8 +18,6 @@
     ></script>
   </head>
   <body>
-    <img src="img/here-could-be-your-ad-create-gift-yoursel-teddy-bear.jpg" alt="add">
-    <h1>Price:</h1>
-    <h2>2 cookies</h2>
+    <header data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="global.header.partial.html"></header>
   </body>
 </html>
