--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   </head>
   <body>
     <header data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="global.header.partial.html"></header>
+    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section.partial.html"></section>
   </body>
 </html>
