--- a/global.header.partial.html
+++ b/global.header.partial.html
@@ -1,15 +1,41 @@
-<div class="top__header">
-    <a href="index.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
-    <p class="top__header__text">Need help? Call us<a href="tel:+12345678900">+1 (234) 567-8900</a></p>
-    <nav class="top__header__nav-bar">
-        <ul>
-            <li><a href="">Categories</a></li>
-            <li><a href="">Deals</a></li>
-            <li><a href="">Sale</a></li>
-            <li><a href="">Partners</a></li>
-            <li><a href="">News</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contacts</a></li>
-        </ul>
-    </nav>
+<div class="top">
+    <div class="top__nav">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#">Returns & Refunds</a></li>
+                <li class="nav__item"><a href="#">Warranty Information</a></li>
+                <li class="nav__item"><a href="#">Shipping & Delivery</a></li>
+                <li class="nav__item"><a href="#">Track Order</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="top__icons">
+        <img src="img/global/top_icons/X_logo_2023.svg" alt="">
+    </div>
+</div>
+<div class="top-header">
+    <div class="top-header__block top-header__block--logo">
+        <a href="index.html" class="logo">
+            <img class="logo__img" src="img/logo.svg" alt="logo">
+        </a>
+    </div>
+    <div class="top-header__block top-header__block--contacts">
+        <p class="top-header__text">
+            Need help? Call us 
+            <a class="top-header__phone" href="tel:+12345678900">+1 (234) 567-8900</a>
+        </p>
+    </div>
+    <div class="top-header__block top-header__block--nav">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#">Categories</a></li>
+                <li class="nav__item"><a href="#">Deals</a></li>
+                <li class="nav__item"><a href="#">Sale</a></li>
+                <li class="nav__item"><a href="#">Partners</a></li>
+                <li class="nav__item"><a href="#">News</a></li>
+                <li class="nav__item"><a href="#">About Us</a></li>
+                <li class="nav__item"><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+    </div>
 </div>
