--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
       integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
       crossorigin="anonymous"
     ></script>
+    
   </head>
   <body>
     <header data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="global.header.partial.html"></header>
+    
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section__header.partial.html"></section>
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section__bestseller.partial.html"></section>
     <main data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.main.partial.html"></main>
+    <script src="script.js"></script>
   </body>
 </html>
