--- a/index.section__header.partial.html
+++ b/index.section__header.partial.html
@@ -3,7 +3,7 @@
         <h1>Take Your Gadgets to the next level!</h1>
         <h4>Discover the latest in tech innovation with exclusive discounts up to 50% off. Don’t miss limited-time offers!</h4>
         <div class="section__header__block__bottom-block">
-            <button class="section__header__block__bottom-block__button">Shop Now</button>
+            <button id="section__header__block__bottom-block__button">Shop Now</button>
             <a href="http://"><img src="" alt="video img">Watch Video</a>
         </div>
     </div>
