Added flexible header

--- a/global.header.partial.html
+++ b/global.header.partial.html
@@ -78,9 +78,9 @@
         </div>
         <div class="phone__icons">
             <a href="https://x.com"><img class="x-icon" src="img/global/top_icons/X_logo_2023.svg" alt="x logo"></a>
-            <a href="https://www.youtube.com/"><img class="youtube" src="img/global/top_icons/youtube.svg" alt="youtube logo"></a>
-            <a href="https://facebook.com"><img class="facebook-icon" src="img/global/top_icons/facebook.svg" alt="facebook logo"></a>
-            <a href="https://web.telegram.org/k/"><img class="telegram-icon" src="img/global/top_icons/telegram.svg" alt="telegram logo"></a>
+            <a href="https://www.youtube.com/"><img src="img/global/top_icons/youtube.svg" alt="youtube logo"></a>
+            <a href="https://facebook.com"><img src="img/global/top_icons/facebook.svg" alt="facebook logo"></a>
+            <a href="https://web.telegram.org/k/"><img src="img/global/top_icons/telegram.svg" alt="telegram logo"></a>
         </div>
         <div class="phone__contacts">
             <p class="top-header__text">
