--- a/index.section__header.partial.html
+++ b/index.section__header.partial.html
@@ -1,16 +1,18 @@
 <div class="section__header">
-    <div class="section__header__block">
-        <h1>Take Your Gadgets to the next level!</h1>
-        <h4>Discover the latest in tech innovation with exclusive discounts up to 50% off. Don’t miss limited-time offers!</h4>
+    <header class="section__header__block">
+        <div class="section__header__block__slogan-block">
+            <h1 class="section__header__block__slogan">Take Your Gadgets to the next level!</h1>
+        </div>
+        <p class="section__header__block__text">Discover the latest in tech innovation with exclusive discounts up to <span class="top-header__phone">50% off</span>. Don’t miss limited-time offers!</p>
         <div class="section__header__block__bottom-block">
             <button id="section__header__block__bottom-block__button">Shop Now</button>
-            <a href="http://"><img src="" alt="video img">Watch Video</a>
+            <a href="http://"><img class="button__play" src="../img/index/header/play.svg" alt="video img">Watch Video</a>
         </div>
-    </div>
+    </header>
     <div class="section__bottom__block">
-        <p><span><img src="" alt="Headphones img"></span>Wireless & Wired Headphones</p>
-        <p><span><img src="" alt="Keyboard img"></span>Mechanical Keyboards</p>
-        <p><span><img src="" alt="Mouse img"></span>Optical and Laser Mice</p>
-        <p><span><img src="" alt="Monitor img"></span>High-Resolution Monitors</p>
+        <p class="section__bottom__block__text"><span><img class="svg__img" src="../img/index/header/icon__svg/headphones.svg" alt="Headphones img"></span>Wireless & Wired Headphones<span class="stick__svg"><img src="../img/index/header/icon__svg/stick.svg" alt=""></span></p>
+        <p class="section__bottom__block__text"><span><img class="svg__img" src="../img/index/header/icon__svg/keyboard.svg" alt="Keyboard img"></span>Mechanical Keyboards<span class="stick__svg"><img src="../img/index/header/icon__svg/stick.svg" alt=""></span></p>
+        <p class="section__bottom__block__text"><span><img class="svg__img" src="../img/index/header/icon__svg/mouse.svg" alt="Mouse img"></span>Optical and Laser Mice<span class="stick__svg"><img src="../img/index/header/icon__svg/stick.svg" alt=""></span></p>
+        <p class="section__bottom__block__text"><span><img class="svg__img" src="../img/index/header/icon__svg/monitor.svg" alt="Monitor img"></span>High-Resolution Monitors<span class="stick__svg"><img src="../img/index/header/icon__svg/stick.svg" alt=""></span></p>
     </div>
 </div>
