--- a/global.header.partial.html
+++ b/global.header.partial.html
@@ -1,93 +1,133 @@
 <!-- Desktop nav-bar -->
 <div class="top">
-    <div class="top__nav">
-        <nav>
-            <ul class="top__nav__list">
-                <li class="top__nav__item"><a href="#">Returns & Refunds</a></li>
-                <li class="top__nav__item"><a href="#">Warranty Information</a></li>
-                <li class="top__nav__item"><a href="#">Shipping & Delivery</a></li>
-                <li class="top__nav__item"><a href="#">Track Order</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="top__icons">
-        <a href="https://x.com"><img class="x-icon" src="img/global/top_icons/X_logo_2023.svg" alt="x logo"></a>
-        <a href="https://www.youtube.com/"><img class="youtube" src="img/global/top_icons/youtube.svg" alt="youtube logo"></a>
-        <a href="https://facebook.com"><img class="facebook-icon" src="img/global/top_icons/facebook.svg" alt="facebook logo"></a>
-        <a href="https://web.telegram.org/k/"><img class="telegram-icon" src="img/global/top_icons/telegram.svg" alt="telegram logo"></a>
-    </div>
+  <div class="top__nav">
+    <nav>
+      <ul class="top__nav__list">
+        <li class="top__nav__item"><a href="#">Returns & Refunds</a></li>
+        <li class="top__nav__item"><a href="#">Warranty Information</a></li>
+        <li class="top__nav__item"><a href="#">Shipping & Delivery</a></li>
+        <li class="top__nav__item"><a href="#">Track Order</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="top__icons">
+    <a href="https://x.com"
+      ><img
+        class="x-icon"
+        src="img/global/top_icons/X_logo_2023.svg"
+        alt="x logo"
+    /></a>
+    <a href="https://www.youtube.com/"
+      ><img
+        class="youtube"
+        src="img/global/top_icons/youtube.svg"
+        alt="youtube logo"
+    /></a>
+    <a href="https://facebook.com"
+      ><img
+        class="facebook-icon"
+        src="img/global/top_icons/facebook.svg"
+        alt="facebook logo"
+    /></a>
+    <a href="https://web.telegram.org/k/"
+      ><img
+        class="telegram-icon"
+        src="img/global/top_icons/telegram.svg"
+        alt="telegram logo"
+    /></a>
+  </div>
 </div>
 <div class="top-header">
-    <div class="top-header__block top-header__block--logo">
-        <a href="index.html" class="logo">
-            <img class="logo__img" src="img/logo.svg" alt="logo">
-        </a>
-    </div>
-    <div class="top-header__block top-header__block--contacts">
-        <p class="top-header__text">
-            Need help? Call us 
-            <a class="top-header__phone" href="tel:+12345678900">+1 (234) 567-8900</a>
-        </p>
-    </div>
-    <div class="top-header__block top-header__block--nav">
-        <nav>
-            <ul class="nav__list">
-                <li class="nav__item"><a href="#">Categories</a></li>
-                <li class="nav__item"><a href="#">Deals</a></li>
-                <li class="nav__item"><a href="#">Sale</a></li>
-                <li class="nav__item"><a href="#">Partners</a></li>
-                <li class="nav__item"><a href="#">News</a></li>
-                <li class="nav__item"><a href="#">About Us</a></li>
-                <li class="nav__item"><a href="#">Contacts</a></li>
-            </ul>
-        </nav>
-    </div>
+  <div class="top-header__block top-header__block--logo">
+    <a href="index.html" class="logo">
+      <img class="logo__img" src="img/logo.svg" alt="logo" />
+    </a>
+  </div>
+  <div class="top-header__block top-header__block--contacts">
+    <p class="top-header__text">
+      Need help? Call us
+      <a class="top-header__phone" href="tel:+12345678900">+1 (234) 567-8900</a>
+    </p>
+  </div>
+  <div class="top-header__block top-header__block--nav">
+    <nav>
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#">Categories</a></li>
+        <li class="nav__item"><a href="#">Deals</a></li>
+        <li class="nav__item"><a href="#">Sale</a></li>
+        <li class="nav__item"><a href="#">Partners</a></li>
+        <li class="nav__item"><a href="#">News</a></li>
+        <li class="nav__item"><a href="#">About Us</a></li>
+        <li class="nav__item"><a href="#">Contacts</a></li>
+      </ul>
+    </nav>
+  </div>
 </div>
 
 <!-- Phone nav bar -->
 <div class="phone__top__header">
-    <div class="top-header__block--logo">
-        <a href="index.html" class="logo">
-            <img class="logo__img" src="img/logo.svg" alt="logo">
-        </a>
+  <div class="top-header__block--logo">
+    <a href="index.html" class="logo">
+      <img class="logo__img" src="img/logo.svg" alt="logo" />
+    </a>
+  </div>
+  <button id="burger-menu">
+    <img src="img/global/top_icons/burger_menu.svg" alt="menu icon" />
+  </button>
+  <div class="phone__top__header__nav-block">
+    <div class="phone__top__nav">
+      <nav>
+        <ul class="phone__top__nav__list">
+          <li class="phone__top__nav__item">
+            <a href="#">Returns & Refunds</a>
+          </li>
+          <li class="phone__top__nav__item">
+            <a href="#">Warranty Information</a>
+          </li>
+          <li class="phone__top__nav__item">
+            <a href="#">Shipping & Delivery</a>
+          </li>
+          <li class="phone__top__nav__item"><a href="#">Track Order</a></li>
+        </ul>
+      </nav>
     </div>
-    <button id="burger-menu"><img src="img/global/top_icons/burger_menu.svg" alt="menu icon"></button>
-    <div class="phone__top__header__nav-block">
-        <div class="phone__top__nav">
-            <nav>
-                <ul class="phone__top__nav__list">
-                    <li class="phone__top__nav__item"><a href="#">Returns & Refunds</a></li>
-                    <li class="phone__top__nav__item"><a href="#">Warranty Information</a></li>
-                    <li class="phone__top__nav__item"><a href="#">Shipping & Delivery</a></li>
-                    <li class="phone__top__nav__item"><a href="#">Track Order</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="phone__top-header">
-            <nav>
-                <ul class="phone__nav__list">
-                    <li class="phone__nav__item"><a href="#">Categories</a></li>
-                    <li class="phone__nav__item"><a href="#">Deals</a></li>
-                    <li class="phone__nav__item"><a href="#">Sale</a></li>
-                    <li class="phone__nav__item"><a href="#">Partners</a></li>
-                    <li class="phone__nav__item"><a href="#">News</a></li>
-                    <li class="phone__nav__item"><a href="#">About Us</a></li>
-                    <li class="phone__nav__item"><a href="#">Contacts</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="phone__icons">
-            <a href="https://x.com"><img class="x-icon" src="img/global/top_icons/X_logo_2023.svg" alt="x logo"></a>
-            <a href="https://www.youtube.com/"><img src="img/global/top_icons/youtube.svg" alt="youtube logo"></a>
-            <a href="https://facebook.com"><img src="img/global/top_icons/facebook.svg" alt="facebook logo"></a>
-            <a href="https://web.telegram.org/k/"><img src="img/global/top_icons/telegram.svg" alt="telegram logo"></a>
-        </div>
-        <div class="phone__contacts">
-            <p class="top-header__text">
-                Need help? Call us 
-                <a class="top-header__phone" href="tel:+12345678900">+1 (234) 567-8900</a>
-            </p>
-        </div>
+    <div class="phone__top-header">
+      <nav>
+        <ul class="phone__nav__list">
+          <li class="phone__nav__item"><a href="#">Categories</a></li>
+          <li class="phone__nav__item"><a href="#">Deals</a></li>
+          <li class="phone__nav__item"><a href="#">Sale</a></li>
+          <li class="phone__nav__item"><a href="#">Partners</a></li>
+          <li class="phone__nav__item"><a href="#">News</a></li>
+          <li class="phone__nav__item"><a href="#">About Us</a></li>
+          <li class="phone__nav__item"><a href="#">Contacts</a></li>
+        </ul>
+      </nav>
     </div>
+    <div class="phone__icons">
+      <a href="https://x.com"
+        ><img
+          class="x-icon"
+          src="img/global/top_icons/X_logo_2023.svg"
+          alt="x logo"
+      /></a>
+      <a href="https://www.youtube.com/"
+        ><img src="img/global/top_icons/youtube.svg" alt="youtube logo"
+      /></a>
+      <a href="https://facebook.com"
+        ><img src="img/global/top_icons/facebook.svg" alt="facebook logo"
+      /></a>
+      <a href="https://web.telegram.org/k/"
+        ><img src="img/global/top_icons/telegram.svg" alt="telegram logo"
+      /></a>
+    </div>
+    <div class="phone__contacts">
+      <p class="top-header__text">
+        Need help? Call us
+        <a class="top-header__phone" href="tel:+12345678900"
+          >+1 (234) 567-8900</a
+        >
+      </p>
+    </div>
+  </div>
 </div>
-
