--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section__header.partial.html"></section>
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section__bestseller.partial.html"></section>
     <main data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.main.partial.html"></main>
-    <script src="script.js"></script>
+    <script src="global-js.js" type="module"></script>
   </body>
 </html>
