--- a/index.section__bestseller.partial.html
+++ b/index.section__bestseller.partial.html
@@ -1,17 +1,17 @@
 <div class="section__bestseller">
-    <div class="section__bestseller_block-1">
-        <h4 class="section__bestseller_block_header" id="section__bestseller_block_name-of-gadget">BESTSELLER</h4>
-        <h2 class="section__bestseller_block_name-of-gadget">KeyGo X1</h2>
-        <p class="section__bestseller_block_p">Wireless headphones.</p>
+    <div class="section__bestseller__block-1">
+        <h4 class="header-text">BESTSELLER</h4>      
+        <h2 class="section__bestseller__block__name-of-gadget" id="section__bestseller__block__name-of-gadget-black">KeyGo X1</h2>
+        <p id="section__bestseller__block__p" class="section__bestseller__block__p">Wireless headphones.</p>
     </div>
-    <div class="section__bestseller_block-2">
-        <h4 class="section__bestseller_block_header">BESTSELLER</h4>
-        <h2 class="section__bestseller_block_name-of-gadget">QuantumX1</h2>
-        <p class="section__bestseller_block_p">Keyboard for gamer.</p>
+    <div class="section__bestseller__block-2">
+        <h4 class="header-text" id="section__bestseller__block__name-of-gadget">BESTSELLER</h4>
+        <h2 class="section__bestseller__block__name-of-gadget">QuantumX1</h2>
+        <p class="section__bestseller__block__p">Keyboard for gamer.</p>
     </div>
-    <div class="section__bestseller_block-">
-        <h4 class="section__bestseller_block_header">BESTSELLER</h4>
-        <h2 class="section__bestseller_block_name-of-gadget">AeroTrack 300</h2>
-        <p class="section__bestseller_block_p" id="section__bestseller_block_p">Ultimate mice for work.</p>
+    <div class="section__bestseller__block-3">
+        <h4 class="header-text">BESTSELLER</h4>
+        <h2 class="section__bestseller__block__name-of-gadget">AeroTrack 300</h2>
+        <p class="section__bestseller__block__p">Ultimate mice for work.</p>
     </div>                                                                                                                                                                                                                                                                                                
 </div>
