--- a/global.header.partial.html
+++ b/global.header.partial.html
@@ -19,19 +19,19 @@
     /></a>
     <a href="https://www.youtube.com/"
       ><img
-        class="youtube"
+        class="icon"
         src="img/global/top_icons/youtube.svg"
         alt="youtube logo"
     /></a>
     <a href="https://facebook.com"
       ><img
-        class="facebook-icon"
+        class="icon"
         src="img/global/top_icons/facebook.svg"
         alt="facebook logo"
     /></a>
     <a href="https://web.telegram.org/k/"
       ><img
-        class="telegram-icon"
+        class="icon"
         src="img/global/top_icons/telegram.svg"
         alt="telegram logo"
     /></a>
