--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section__bestseller.partial.html"></section>
 
-    <main data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.main.partial.html"></main>
+    <main data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section__popular-items.partial.html"></main>
     
-    <script src="global-js.js" type="module"></script>
+    <script src="global-js.js"></script>
   </body>
 </html>
