Add section popular items

--- a/index.section__popular-items.partial.html
+++ b/index.section__popular-items.partial.html
@@ -87,7 +87,7 @@
                 <button class="gadget-block__btn">Buy Now</button>
             </div>
             <div class="gadget-block">
-                <div class="gadget-block__badge gadget-block__badge--new">New</div>
+                <div class="gadget-block__badge gadget-block__badge--new">Bestseller</div>
                 <div class="gadget-block__img">
                     <img src="img/index/section__goods/mouse/mouse2.png" alt="LumiMouse Pro">
                 </div>
@@ -151,18 +151,83 @@
         </div>
         <div class="blocks-info__block blocks-info__block--right">
             <div class="blocks-info__block--right__content ">
-                <h2>AirPulse <span style="color: ff8000;">R255 X</span> Wireless</h2>
-                <p class="colored-text"><span>$240.00 </span>$185.00</p>
-                <p><span style="color: rgb(28, 76, 151);">●</span> Free delivery applies to standard shipping;</p>
-                <p><span style="color: rgb(28, 76, 151);">●</span> Get your items delivered straight to your door;</p>
-                <p><span style="color: rgb(28, 76, 151);">●</span> Transparent and straightforward shipping terms;</p>
-                <p><span style="color: rgb(28, 76, 151);">●</span> Specialty items may not qualify for free shipping.</p>
-                <button>About Delivery</button>
+                <h2>AirPulse <span style="color: #ff8000;">R255 X</span> Wireless</h2>
+                <p class="colored-text"><span class="colored-text__other">$240.00</span> $185.00</p>
+                <p style="color: #ffffff; padding: 20px 0; font-style: italic;">* Promo price until 30 November, 2024</p>
+                <button class="about-delivery-btn">Learn more</button>
             </div>
+        </div>  
+    </section>
+    <section class="block__shop-now">
+        <div class="block__shop-now__content">
+            <h2 class="block__shop-now-content__h2">Up to 30% off on selected gear and accessories for designers</h2>
+            <p>Don't miss out on our summer sale! The offer ends soon.</p>
+            <button class="about-delivery-btn">Shop Now</button>
         </div>
     </section>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex qui illo eos, temporibus in consequuntur itaque odit officiis molestias doloribus sunt rerum corrupti labore voluptatem placeat debitis ut, at nulla?
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora saepe recusandae aliquid sit dignissimos. Veniam mollitia, aspernatur reprehenderit itaque, beatae inventore amet tempora possimus iste odit ex, quam porro quod!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, delectus odio? Quaerat totam veritatis sint voluptate. Ad ipsa earum optio! Sed quia rerum repellat ipsum minus accusamus dolorem velit laudantium?
-    </div>
+    <section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem a veritatis iure, delectus voluptatum libero mollitia ipsa amet dolorum? Sequi accusamus beatae nobis esse, culpa consequuntur veritatis itaque cum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem in consectetur distinctio cumque magnam possimus fuga placeat optio rerum nam, tenetur quas. Quaerat recusandae enim voluptate aspernatur harum ratione?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repudiandae iure quaerat exercitationem minima quam sunt! Harum ad eligendi ut. Expedita sint sapiente eaque dolorum corporis ea sunt, illum at.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, dolorum ad. Excepturi vitae magni reiciendis? Quaerat rem minus nam quam eos ratione earum nobis! Eum quasi amet earum in vel.
+
+    </section>
 </main>
+<script>
+    window.addEventListener('load', function() {
+        // Отримуємо елементи лівого і правого блоків
+        const leftBlock = document.querySelector('.blocks-info__block--left');
+        const rightBlock = document.querySelector('.blocks-info__block--right');
+
+        // Функція для оновлення висоти правого блоку
+        function updateRightBlockHeight() {
+            const leftHeight = leftBlock.offsetHeight;
+            rightBlock.style.height = `${leftHeight}px`;
+        }
+
+        // Викликаємо функцію для встановлення висоти при завантаженні сторінки
+        updateRightBlockHeight();
+
+        // Якщо розмір вікна змінюється, потрібно оновити висоту
+        window.addEventListener('resize', updateRightBlockHeight);
+    });
+</script>
